--- a/client/style.css
+++ b/client/style.css
@@ -56,7 +56,7 @@ canvas {
 
 .pokemon-card {
   display: grid;
-  grid-template-rows: 1.7fr 1.2fr 1fr;
+  grid-template-rows: auto auto auto;
   row-gap: 7px;
 
   background-color: rgb(255, 255, 255);
@@ -81,9 +81,41 @@ canvas {
 }
 
 .pokemon-sprite > img {
-  min-width: 75%;
+  min-width: 70%;
 }
 
 .pokemon-sprite > img:hover {
   cursor: pointer;
+}
+
+@media (max-width: 825px) {
+  body {
+    font-size: 0.9em;
+  }
+
+  .pokemon-card {
+    row-gap: 5px;
+    width: 165px;
+  }
+
+  .pokemon-sprite > img {
+    min-width: 55%;
+    max-width: 55%;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    font-size: 0.85em;
+  }
+
+  .pokemon-card {
+    row-gap: 5px;
+    width: 150px;
+  }
+
+  .pokemon-sprite > img {
+    min-width: 50%;
+    max-width: 50%;
+  }
 }
